feat: add flow field integration updates